# fnir

./: Cargo.toml  README.md
src/: algebra.rs  geom.rs  lib.rs
src/algebra/: mod.rs  polynomial.rs
src/quadrature/: mod.rs  qubature.rs
