[package]
name = "fnir"
version = "0.1.1"
edition = "2021"
authors = ["Leo Lahti leo.lahti1@gmail.com"]
description = "Fast numerical integration rules, like tanh-sinh quadrature"
repository = "https://github.com/TileHalo/fnir"

license = "GPL-3.0"
# Using latex in the docs to display formulas
[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
itertools = "0.14.0"
num = "0.4.3"
num-complex = "0.4.6"
num-traits = "0.2.19"

[dev-dependencies]
assert_approx_eq = "1.1.0"
